# ChangeLog for app-forensics/rkhunter
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-forensics/rkhunter/ChangeLog,v 1.101 2014/06/30 14:21:44 zerochaos Exp $

*rkhunter-1.4.0 (30 Jun 2014)

  30 Jun 2014; Rick Farina <zerochaos@gentoo.org> +rkhunter-1.4.0.ebuild:
  readding inappropriately dropped stable

  29 Jun 2014; Rick Farina <zerochaos@gentoo.org> -rkhunter-1.4.0.ebuild:
  remove old version

  27 May 2014; Rick Farina <zerochaos@gentoo.org>
  +files/rkhunter-1.4.0.conf.patch, +files/rkhunter-1.4.2.conf.patch,
  -files/rkhunter.conf.patch, rkhunter-1.4.0.ebuild, rkhunter-1.4.2.ebuild:
  tested improperly, bump is proper now

*rkhunter-1.4.2 (27 May 2014)

  27 May 2014; Rick Farina <zerochaos@gentoo.org> +rkhunter-1.4.2.ebuild:
  simple revbump as requested by bug 504066. tested and functional

  11 Apr 2013; Patrick Lauer <patrick@gentoo.org> rkhunter-1.4.0.ebuild:
  Dependency fix for #398123

  11 Apr 2013; Patrick Lauer <patrick@gentoo.org> rkhunter-1.4.0.ebuild:
  Dependency fix for #447078

  25 Nov 2012; Tim Harder <radhermit@gentoo.org> -rkhunter-1.3.8.ebuild,
  -rkhunter-1.3.8-r1.ebuild, -files/rkhunter-1.3.8-file-compat.patch:
  Remove old.

  21 Nov 2012; Agostino Sarubbo <ago@gentoo.org> rkhunter-1.4.0.ebuild:
  Stable for x86, wrt bug #439208

  29 Oct 2012; Anthony G. Basile <blueness@gentoo.org> rkhunter-1.4.0.ebuild:
  stable ppc, bug #439208

  28 Oct 2012; Markos Chandras <hwoarang@gentoo.org> rkhunter-1.4.0.ebuild:
  Stable on amd64 wrt bug #439208

*rkhunter-1.4.0 (01 May 2012)

  01 May 2012; Tim Harder <radhermit@gentoo.org> +rkhunter-1.4.0.ebuild:
  Version bump.

*rkhunter-1.3.8-r1 (09 Apr 2012)

  09 Apr 2012; Jeremy Olexa <darkside@gentoo.org> +rkhunter-1.3.8-r1.ebuild,
  +files/rkhunter-1.3.8-file-compat.patch:
  Revision bump to add upstream patch for sys-apps/file compatibility

  12 Jan 2012; Tim Harder <radhermit@gentoo.org> -files/rkhunter-ppc64.patch,