@@ -1,5 +1,5 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA512
+Hash: SHA256
 
 AUX rkhunter-1.3.cron 4050 SHA256 011216f98936daa079a7c9db4bec8620b0dae793b2de7649f532bbc15c16f751 SHA512 02114707162a918f96d5c6e9161b62d2905aa1999b03561f6371be5216a7893b8d5aa247262d225b21c6e87a1df8f181ab973d807d12b0f976c646379ba9f1da WHIRLPOOL 0dfdd9c12f7df1f79337295e297c28b1f1a1f215e4b3b3df71079fda4e5d5f24e63f9d3af6ea28eada41df681694a63bc0e07575c08c20804b11440f613d4069
 AUX rkhunter-1.4.0.conf.patch 786 SHA256 2ca73ff5b9e7b6b3b1c65948813f5124662b8fb6087108adebccd9aa5e4a19d8 SHA512 9a56075dabed278dc837e91872c62ca9fd648b35c1f7f37755e58f17f3f474d03d8dd6313e9de0a7cbc1c4506d12cb81015ac258c184b43139d5ff6d2afac603 WHIRLPOOL 0eff7c92543a10dfee1ccf2d86fffcd48473e12a23d5d2d46002453e87e54e14a3ab60d05b6c104d784b507a0a456e0c4817725635ab6421139a9b1b8330a8e1
@@ -8,23 +8,17 @@ AUX rkhunter.bash-completion 2628 SHA256 d99776d6b300697cb6571e409e6c93bc96e6898
 DIST rkhunter-1.4.0.tar.gz 244211 SHA256 8a03d6add50663531994d55aff058eced74c64df948b88176621cd761b68ccf9 SHA512 597e8b2e3f75cd1cb57dd3e33df004265f03ca1503310f984211612da43a160e5d3b50626b4918bd38bf0d239fe2e4a45e55a96212c5a3b5a5645e77e030b60a WHIRLPOOL 45c023b625c7c1664a9f99438b5bebe5ed70265346f122b9d71f91611439d77a2bda01c137698898314183458c4467c66f73bb703b83fbaae2ffe65ded3307ad
 DIST rkhunter-1.4.2.tar.gz 277707 SHA256 789cc84a21faf669da81e648eead2e62654cfbe0b2d927119d8b1e55b22b65c3 SHA512 a4e45caaaf5b8262619ebb890784c75c4e30db4c6c0eba305f86d419142b4796c95bc55fe8846dce8d58bc7636bdb365a4a8c41707f64d4d81373687c5a3b0d4 WHIRLPOOL 911ed8e37e112516adba3afb63e3d4862d061ea35cd4b8becea455922d6b2a744f4b8e7cf92685cff29c3192c594dfc58ba3c194f371dd4d95530bd4c09c5d84
 EBUILD rkhunter-1.4.0.ebuild 1595 SHA256 fb0ae40b89cc129fbc2b17de6229de1dc700b64736e6c656571138aaf66af4d5 SHA512 5769f0de611a237c5a9b6649015aeb6df00fe921f900b0c2c62ef39dd952c27230d70432f450d28837288ebbf833487dc2bd868a65e096508987f860392a395d WHIRLPOOL 3b6b170be1bf8db3bbdc058ebf9229ec31e4787f3f2c3833b0162a5a38741749613d59c49d30fa62eee1d20b8eb385d7fb2a81491b84c963de41eae2ed859d6a
-EBUILD rkhunter-1.4.2.ebuild 1531 SHA256 a39b5b17eeb56da5adb8fc9c139b8d95520b846f20b98361b23f0fc7320ef74a SHA512 7a0a7abbdcd82d13ab937b3bf8db2a54eaea42d2ae0c990b003480b43cf26a0e9ea9caa54816784dbf6b8fd17e056958e02693d6a680262d608bd54469835725 WHIRLPOOL d99f5382a5b964c4c32594f3ea533432b1e7420c0a9e3a04b6cae3408f3752780167b72c0f721ad53ab66452ea3c6c472855e88945b2f5ae5df56ebb019761ef
-MISC ChangeLog 17036 SHA256 1f60e9638ac5e75aec97c63fb108924ce93300ec5409ce7ff488504d2a5ae2c4 SHA512 6233dcb80ad21eb85b66e8ebf73bd77f8fe881b389a191b5f217e760f05dd835d300eaf7bd684aa4220c9341eb25db7892d3e663c501e3e497c7dfd32fc08cda WHIRLPOOL 314367ce34de3deee0805483d5add241839f64d94c5ff58a5661c26a1e7649e750b64b18a54336de321b3c525330aeedf1e9dc361a1a598212d24deb99078e65
+EBUILD rkhunter-1.4.2.ebuild 1527 SHA256 2eb6011200cda4358b78b0051c05f23ae26c64fc9a26da49f8d15aa116caf6ff SHA512 e10e163b1221cf92261e6039d676afb2e7b419fac8b717153ec0fc2a9dece7152d5145d8cc351b620da58d5d9dfe197d2992d83a7e2dde571fe9183ad37a9254 WHIRLPOOL 2c97974477a89f364b6171334a8ca48689a873368d6e31aa1ce329e86fe7a684a20f9134a8dd80f1c060847dc6cbd41721c4b7077b107b93d030dfcd4d8b6f46
+MISC ChangeLog 17140 SHA256 98fd320eb2fbf7b6fb9a69a09e0d9adb59c949ebe552bdf91665f6651a341691 SHA512 da9071580a02ad225166ff2d0e7df7c2d8e40b87dafad761251915c3efa754b83b0c4a19c651e3f3c5a7d915dc0cc6afebcb3fa436c2c4cfbcded0aab934580a WHIRLPOOL 302dde9d7682f608fd7985978c24006a39743610fc2cb3c67c1d6eba5a6256759043aa48978e65a379ee6bcddae703d17214775e63ee686574cd9ecfd405e977
 MISC metadata.xml 164 SHA256 e8d7dfabbaf13302703ccc3428fa0ecedf5d444e0c58692ebbd03c5bd0d9240f SHA512 94406e683edbbedca87a25db398f638c7a020358a7a873bb54be987835a053cd2635ec470ff232d8fd14ccd458a97b96616132113c5a040b63023dc10a1cc807 WHIRLPOOL b83f30c16ff91069d0593d4b35335c9d391ebb28f4ce3d485d645629a8747d574e57c3c24647087e7dbfe3e9dc20e77d243302ad570d680dbf721a92125538b9
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.22 (GNU/Linux)
+Version: GnuPG v2
 
-iQIcBAEBCgAGBQJTsXM5AAoJEKXdFCfdEflK7ssP/3P2nl8BlTSuxVbHMLqJbi0N
-OQkZzaOzQEMnqqeZ6DBbt8ClqSYTvmS6j+SFVbObHGY/+ZlFTSl+m907jo3KalQb
-d2hk7Zlj+KKT7UKyuavsKjxHbCj9obRcgaY//PscWtD/yweQv+V2f/9TQeYQZtUY
-nihpaazWTfoaXlVn+OepGHc4tFIKg8j0kpcDqPIl4Cr+HlisHPVud1eime8ibZV+
-buI/HDRRVwP7ON554qfZfClCaUTSERHn76wVMKdkVNIfs21NZAcEGwID8YyHAoND
-hRfUSncHXb82/Z84/2NjF3ROGa4e9kwZt+W+yFqQFGvYC+blUc+O0XbrZRwJA1BH
-nUsSTmw2pX1lea3SUidGO1RxdJ50S6NetceryZdEfnsV69RZhoID8ZRG/WAejwYd
-PmZxso1smKyKx2HhcaoXYmmOdTfNm6y9qgwRMeXZT6T+YUHR89w0xMtQ5EBYUfaO
-mwCvAl/Y5CBKLjzgL4yvqj0cOKRONpeQSF/jZAWPxMky5AdV80Nz97lgxojVoD9M
-P34GGKq5MTZr7AVk/O7Xrg8oUTOOoFftPLBe6gPmfLcZdt9+1HzQlqw4Kox4QPJO
-CF64JUlcKAASwvrUuyxqKAp0bsnumnI26zJ9Wno7wJQ5+hCpUm5AOTBkLkHC7JMc
-DOhX5X8jjojfK1a/xYOG
-=duhc
+iQEcBAEBCAAGBQJTzVhQAAoJEA2sAkrWKOU2WDsIAMJdmwXFdxKxcvtXWbmvBwFt
+q1jidNJYxM2DRyesgH2JMFm+XpYT73MdZvaRaNY7lEgyzCCkr7ksyRKhf01RBKQi
+84Tvk1I5ty4gxd2d4QlExyKRg/eAkZFwQb0Sw2WryfcJWbGF6tgMSdhN1e+EOBUw
+t3KP+Qv35QXrgb1tSAYGAtuI253wM5kVi4mOhySy0ZhizrcioXB6AIycnMxCKSVk
+PJ7aJTEuDv6ylJzqJWurSOl5hpaiHZ5TNVjmoFjeEKxCku60fZIpQ4nCSGj/pVwV
+sAwQelt5gOUtW04U6x9G1DX6EFwNF21Ous//BmLLiRSnIUgpY3beQzgo3de49Rw=
+=Q0ob
 -----END PGP SIGNATURE-----
