@@ -11,13 +11,17 @@ DIST lensfun-0.2.7.tar.bz2 552960 SHA256 3ddf0747bd6af1ec7d722f8c45dafdd8adfb96c
 DIST lensfun-0.2.8.tar.bz2 628913 SHA256 f88f97fbc78259a2b2edddef295caf50770901107c8469e54bb5e9699faa1a48 SHA512 46fc545882884f806e3e4c8c49237243123f1f463379a4161821f627eb63b61815fcfe9c19f239b733a311c2c952e4a652fabe2d8e351e31d8157a5f2600e284 WHIRLPOOL 84118fe34e9a6984a5567546daf95ab7e5945e93efcfb45bcd86a157b6b20f3764921c53cfecd9419c9cb0205df8e940f61a828ae575f76bf12282b9b4fad0cc
 EBUILD lensfun-0.2.7.ebuild 1316 SHA256 42b932ca6682c273ae2f13e7cfab440ec62b578ecbf9aca058accca4e81f37f9 SHA512 b03517fa7bd7bb082bad967db58519f1ac3372dab753c5b402327a5e88bdda70cb01dab10677162be0e822cc22e1968ed7121575b39a3b39da74ecf5c9d21e21 WHIRLPOOL 0069735b2588b324eae30ed5a8ddb40744b1eb6f0b2a1fd40c192e2b50cb6ea9a61da542b68f8190b08887201819d0fe5c286bf9479eab82411729f701c7f0ef
 EBUILD lensfun-0.2.8-r1.ebuild 1286 SHA256 8825dd3679e349d072290235403989862f09c867828f795bf88a178b0991db6c SHA512 5483c11b7e8a1385bcaf20e64bdc56d893572c68c9242883562355a9a6044c40faee204d12fc6dd272453d4e1b9092c7cac43b919e3347f8d788dbe4d1268ccc WHIRLPOOL 32e02246532ea4ce3bfe0500edbd43402f46027ab35dad9943ff4a8cd92d7d75b00359c79c9b200c6921529348f032b5b362e4c77bdddfa00849f669c7ac9ee3
-EBUILD lensfun-0.2.8.ebuild 1284 SHA256 8655c9a150d823a57530465625a77a821f1507cde38a83610b609a7ee07a4b4d SHA512 78218f12a14e5b18b4c5189e334c0e0075f37478090e24d57b1c144354ac119e50f2bc4e445d8f2de514054e484a9469789f0221c05e9fb24a7ea48698f72c6b WHIRLPOOL 2c9bc9d936d1429b2a1e76e99516306f8a76ad7161133fa1204fbdea8539418d2913cc43cb2113b96f175c9da788a844fa1c36e7f20db57c4a4335032383d150
-MISC ChangeLog 9043 SHA256 c92324cb3497042ab02c6167c1df056a8be2a595e5e9d23f83bd0704911ada1d SHA512 45a7ffd47966b2a39aa7b0b6389e99af42acd8bcd89522ee054da8f834789880d6980862fb068b636e3256230aff188dcd5bc1e23cc14e01fb98067d3c95715d WHIRLPOOL 2243a3b44fc7f8e0f0f2bb0a2e31b3ab4115c5e55ebd4d8177aa2961348a3c6e282968a2b6533a43591b380876f281cbd57c9278e9aa9a148382a3bbc6850e10
+EBUILD lensfun-0.2.8.ebuild 1283 SHA256 1298a2ed299412021352d4e2397e8aaa2b54ca73768f8ee887a581fe51cf2c25 SHA512 66791be878226541b6fecf9b7309d9caa45dc5cec628a99b7b6287097a19f12322238c90a887a6ee3de32ee71e8b77780017ea075c58751b32ad405cbd833e2f WHIRLPOOL 1c57aeea766b0a9312f218471ab42dba38ca9780b60a34b1f601e021617ad4cb81da196953ce1809484bed9a81f141c7e805f08ceb2fa779c7f64f4b509bedec
+MISC ChangeLog 9149 SHA256 6dfc809963c738d0d90da5ab160c8397a6d728786bdedf4d5fc1a055d98f7540 SHA512 9d9feb07b42b470c77846da6b269cc97556a553d52c4253cfd018962b48c68c5b0e0236a90234c36b6cd5f64eb487d98ce9f8119d3d7a008f141d9efd345291a WHIRLPOOL e779ebfa2a5d967fc9627da6bbe48b5fe300a1657926fc33b15cfb1481d084b6a873f2ecbb70513cf6069dc69fbc0d9b5140d0e172e95dd5aa3a7e4c5e3ae1d8
 MISC metadata.xml 434 SHA256 cdad31489c1592f642177d2c6c152262fc5bba1e6322098a95cbe496d03c3c2f SHA512 3735e2c7fd32e4b2309ebbfb2f8e3107698a5d722fbbb712bddda7dc665af5d994e8f213c06e247ff0fa04f09f209be2cd4fdac4ef218c5b60c99a65334944bf WHIRLPOOL 21bc12855f7bbcd67f885b6a3e022372d5f55524ec305a9e405b2e7d09f76a571236da65d15e81c631c23fa4e914ff1e5ef68fa26f7a51249d5f0837035cd7ef
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iEYEAREIAAYFAlPMB6wACgkQkKaRLQcq0GKXUACfXArJhdnUCCm5rgjbKDc+HnYV
-iVMAnA2oQZUA+6J+qeEo+8QtRBZUCIVs
-=YfAn
+iQEcBAEBCAAGBQJTzVeJAAoJEA2sAkrWKOU2xeAIAKQTefkiZgxWPT0sylwNjjZD
+/rcyarL1tJAiYMMgAx1W4uG/2b6VNaipcUCtvoUWHs47pgw93ErXLi85X32F2dWQ
+GCbhj5nSBhXBKmmpEXSXwwXex3kSRCOCKRR6a1D20Nw3n7k0VVI4dYaRo1apmrvR
+SEmh0WHDO2AZs/DxXUome2NIKPHK5TGtotsV1+qunhU0b45uYbpx9QMatCZ4v5eF
+g7BtbRcxnWdTW9Uwm5TZjV+oozaLEpbmCjGDTkkg25EtwF1Qe5mqij0s61aOSTzI
+dGh48pllQWvyzgm5ITBkmmH5AhY4k32PPp2eG6IjiIEwrvWQjXYZd7/XfIpl/Ig=
+=NDGi
 -----END PGP SIGNATURE-----
