@@ -2,10 +2,10 @@ DEFINED_PHASES=install postinst prepare
 DESCRIPTION=Rootkit Hunter scans for known and unknown rootkits, backdoors, and sniffers.
 EAPI=5
 HOMEPAGE=http://rkhunter.sf.net/
-KEYWORDS=~amd64 ~mips ~ppc ~x86
+KEYWORDS=amd64 ~mips ~ppc ~x86
 LICENSE=GPL-2
 RDEPEND=app-shells/bash dev-lang/perl sys-process/lsof[rpc] virtual/cron virtual/mailx
 SLOT=0
 SRC_URI=mirror://sourceforge/rkhunter/rkhunter-1.4.2.tar.gz
 _eclasses_=bash-completion-r1	db412e427e3317ffd3e15f17df269c5e	eutils	06133990e861be0fe60c2b428fd025d9	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	toolchain-funcs	0f1760274637a138b99bb649202ea402
-_md5_=7336ac6199b83cb7f40a12adb3653fbf
+_md5_=f3ed5b9d2942489453fecef72eb660ca
