@@ -4,11 +4,11 @@ DESCRIPTION=lensfun: A library for rectifying and simulating photographic lens d
 EAPI=5
 HOMEPAGE=http://lensfun.sourceforge.net/
 IUSE=doc sse sse2 python_targets_python2_7 python_single_target_python2_7
-KEYWORDS=~alpha ~amd64 arm hppa ~ia64 ~mips ~ppc ~ppc64 ~s390 ~sh ~sparc ~x86 ~amd64-fbsd ~amd64-linux ~x86-linux
+KEYWORDS=~alpha amd64 arm hppa ~ia64 ~mips ~ppc ~ppc64 ~s390 ~sh ~sparc ~x86 ~amd64-fbsd ~amd64-linux ~x86-linux
 LICENSE=LGPL-3 CC-BY-SA-3.0
 RDEPEND=>=dev-libs/glib-2.28 media-libs/libpng:0= sys-libs/zlib:=
 REQUIRED_USE=python_single_target_python2_7? ( python_targets_python2_7 ) ^^ ( python_single_target_python2_7 )
 SLOT=0
 SRC_URI=mirror://sourceforge/lensfun/lensfun-0.2.8.tar.bz2
 _eclasses_=cmake-utils	10b6a99f9058ac1b830d00b3421f04e4	eutils	06133990e861be0fe60c2b428fd025d9	flag-o-matic	9836bc51856bcaffac53c9cd4b59a8be	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	python-single-r1	a71a169a881e0a11d04a7fe12dc39f6e	python-utils-r1	8c66c6dabd0295878b68b40dbd0b087b	toolchain-funcs	0f1760274637a138b99bb649202ea402
-_md5_=91de96f3b000d3b1689b1f47afa0db3a
+_md5_=c329a19db577dcf4b27d3d9e7dc6fe48
