@@ -1,6 +1,9 @@
 # ChangeLog for app-forensics/rkhunter
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-forensics/rkhunter/ChangeLog,v 1.101 2014/06/30 14:21:44 zerochaos Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-forensics/rkhunter/ChangeLog,v 1.102 2014/07/21 18:12:20 nimiux Exp $
+
+  21 Jul 2014; Chema Alonso <nimiux@gentoo.org> rkhunter-1.4.2.ebuild:
+  Stable for amd64 wrt bug #515868
 
 *rkhunter-1.4.0 (30 Jun 2014)
 
